prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/lex_errors/literal_underflow.nut
// EXPECT_ERROR: "constant underflow"
let x = 1e-999999
